# tinyhttpd4cpp

./: build.sh  readme.md
httpd_ver1/htdocs/: date.cgi
httpd_ver1/src/: Condition.hh  CountDownLatch.cc  General.cc  MutexLock.hh  MutexLockGuard.hh  Socket.cc  TcpConnection.cc  main.cc
httpd_ver1/tmp_build/: Makefile
httpd_ver2/src/: CMakeLists.txt  CountDownLatch.hh  General.hh  Httpd.cc  Httpd.hh  Task.hh  TcpConnection.cc  ThreadPool.cc  ThreadPool.hh
httpd_ver3/: build.sh
httpd_ver3/include/: BlockingQueue.hh  General.hh  Httpd.hh  MutexLockGuard.hh  Socket.hh  Task.hh  TcpConnection.hh  ThreadPool.hh
httpd_ver3/src/: CMakeLists.txt  CountDownLatch.cc  General.cc  Httpd.cc  Socket.cc  TcpConnection.cc  ThreadPool.cc  main.cc
httpd_ver4/: CMakeLists.txt  build.sh
httpd_ver4/src/: CMakeLists.txt
httpd_ver4/src/base/: BlockingQueue.hh  CMakeLists.txt  Condition.hh  Copyable.hh  CountDownLatch.hh  FixedBuffer.hh  General.cc  LogStream.hh  MutexLock.hh  MutexLock.hh.gch  MutexLockGuard.hh  Noncopyable.hh  StringUtil.hh
httpd_ver4/src/http/: CMakeLists.txt  HttpContext.hh  HttpRequest.hh  HttpResponse.cc  HttpServer.cc  HttpServer.hh  Httpd.cc  Httpd.hh  Task.hh
httpd_ver4/src/net/: Acceptor.cc  Buffer.cc  Buffer.hh  CMakeLists.txt  Callback.hh  EpollPoller.hh  Handler.cc  Handler.hh  InetAddress.cc  Reactor.cc  Reactor.hh  ReactorThread.hh  ReactorThreadPool.cc  ReactorThreadPool.hh  Socket.cc  Socket.hh  TcpConnection.cc  TcpConnection.hh  TcpServer.cc  TcpServer.hh  Thread.cc  Thread.hh  ThreadPool.hh  Timer.hh  TimerFdOps.hh  TimerQueue.cc
httpd_ver4/test/: CMakeLists.txt  build.sh  chatServer.cc  echoServer.cc  ftpServer.cc
httpd_ver4/test/http/: httpServer.cc
httpd_ver4/test/http/simple/: Makefile
httpd_ver4/test/simple/: chatServer.cc  echoServer.cc  ftpServer.cc
httpd_ver5/: CMakeLists.txt
httpd_ver5/src/base/: CountDownLatch.cc  CurrentThread.hh  Logging.cc  Timestamp.hh  a.out  testBlockingQueue.cc
httpd_ver5/src/http/: HttpContext.cc  HttpContext.hh  HttpResponse.hh  HttpServer.cc  HttpServer.hh  a.out  testAny.cc
httpd_ver5/src/http/HttpRouter/: HttpHandler.hh  HttpRouter.hh  HttpRouterError.hh  PrefixTree.hh  testHttpRouter.cc
httpd_ver5/src/http/TimeWheel/: SimpleTimeWheel.hh  a.out  testCircularBuffer.cc
httpd_ver5/src/net/: Acceptor.hh  Buffer.hh  CMakeLists.txt  EpollPoller.cc  Handler.hh  InetAddress.hh  Makefile  Reactor.hh  ReactorThread.cc  Socket.cc  TcpConnection.cc  TcpConnection.hh  TcpServer.cc  TcpServer.hh  ThreadPool.cc  TimerQueue.hh  testReactor.cc  testReactorThreadPool.cc
httpd_ver5/test/: CMakeLists.txt
httpd_ver5/test/http/: CMakeLists.txt  httpServer.cc
httpd_ver5/test/http/views/: index.html  index3.html
httpd_ver5/test/simple/: CMakeLists.txt  chatServer.cc  echoServer.cc  ftpServer.cc
src/: CMakeLists.txt  Httpd.cc  Httpd.hh  Socket.hh  TcpConnection.hh
tmp_build/: CMakeCache.txt  cmake_install.cmake
